adding the Meaning

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="meaning.html">Meaning</a></li>
                 <li><a href="interacting.html">Interacting with society</a></li>
                 <li><a href="at.html">Assitive Technology</a></li>
                 <li><a href="sports.html">Adapted Sports</a></li>
@@ -34,51 +35,7 @@
 
 </div>
 
-<!--Meaning-->
 
-<section class="meaning">
-   
-     <div class="meaning-row">
-         <h1>Meaning</h1>
-         <h2>
-            According to the definition of the World Health Organization: <br>
-             “Disability is a term that covers disability, restrictions on activity, and restrictions on participation. <br>
-              Disability is a problem in the function or structure of the body,
-              and limiting activity is the difficulty that an individual faces in carrying out a task
-               or work while restricting participation It is the problem that the individual suffers from in participating in life situations,
-               and therefore disability is a complex phenomenon,
-               which reflects the interaction between the features of a person’s body and the features of the society in which he or she lives. <br>
-               It is also defined as a condition that limits the individual's ability to perform one or more of the functions that are essential in daily life, 
-            <br> such as self-care or social relationship and economic activities,
-             within the limits that are considered normal. Or it is the inability of a person to obtain self-sufficiency 
-            and make him in constant need of the help of others and special education that helps him overcome his disability.
-         </h2>
-
-     </div>
-</section>
-
-<!--empowerment-->
-
-<section class="empowerment">
-    <div class="empowerment-row">
-        <h1>Empowerment</h1>
-        <h2>
-            Empowerment is about inclusion, about being included in local issues and services that affect you. <br>
-             It is about getting your voice heard where it most matters and has maximum impact. <br>
-               It is about not being forgotten and brushed under the carpet.  <br>
-               It is about making decision-makers understand your needs in the local community. <br>
-                It is about celebrating diversity and not being ignored because of your differences. <br>
-              It is about you and your right to be treated equally, whatever your local needs!!!. 
-        </h2>
-         
-
-    </div>
-
-
-
-
-
-</section>
 
 
 
