--- a/sports.html
+++ b/sports.html
@@ -20,6 +20,7 @@
     
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="meaning.html">Meaning</a></li>
                 <li><a href="interacting.html">Interacting with society</a></li>
                 <li><a href="at.html">Assitive Technology</a></li>
                 <li><a href="sports.html">Adapted Sports</a></li>
