--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Girassol&family=Poppins:ital,wght@0,100;0,300;0,400;0,600;0,700;1,200;1,600&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="shortcut icon" href="imeges/icon.png" type="image/png" alt="short icon">
+<link rel="shortcut icon" href="imeges/icon.png" type="image/png">
 <meta charset="utf-8">
 </head>
 <body>
     
 <div class="header">
     <nav> 
-        <a href="index.html"><img src="imeges/icon.png" alt=""></a>
+        <a href="index.html"><img src="imeges/icon.png" alt="icon"></a>
         <div class="nav-links" id="navLinks">
         <i class="fa fa-window-close" onclick="hideMenu()" ></i>
     
