--- a/meaning.html
+++ b/meaning.html
@@ -14,7 +14,7 @@
     
 <div class="header2">
     <nav> 
-        <a href="index.html"><img src="imeges/icon.png" alt=""></a>
+        <a href="index.html"><img src="imeges/icon.png" alt="icon"></a>
         <div class="nav-links" id="navLinks">
         <i class="fa fa-window-close" onclick="hideMenu()" ></i>
     
