--- a/at.html
+++ b/at.html
@@ -23,14 +23,14 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="meaning.html">Meaning</a></li>
                 <li><a href="interacting.html">Interacting with society</a></li>
-                <li><a href="at.html">Assitive Technology</a></li>
+                <li><a href="at.html">Assistive Technology</a></li>
                 <li><a href="sports.html">Adapted Sports</a></li>
                 <li><a href="person.html">Inspritional person</a></li>
             </ul>
         </div>
         <i class="fa fa-bars" onclick="showMenu()"> </i>
     </nav>
-    <h2>Assitive Technology</h2>
+    <h2>Assistive Technology</h2>
 </div>
 
 
