--- a/person.html
+++ b/person.html
@@ -23,7 +23,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="meaning.html">Meaning</a></li>
                 <li><a href="interacting.html">Interacting with society</a></li>
-                <li><a href="at.html">Assitive Technology</a></li>
+                <li><a href="at.html">Assistive Technology</a></li>
                 <li><a href="sports.html">Adapted Sports</a></li>
                 <li><a href="person.html">Inspritional person</a></li>
             </ul>
